# ask-user-via-feishu-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  runtime_config.example.json  start_mcp.py
.github/: copilot-instructions.md
.github/workflows/: build.yml
examples/: mcpServers.ask-user-via-feishu.json
src/ask_user_via_feishu/: __main__.py  ask_runtime.py  ask_state.py  config.py  errors.py  event_handlers.py  event_processor.py  logging_utils.py  longconn.py  main.py  new_bot.py  runtime.py  schemas.py  server.py  shared_longconn.py
src/ask_user_via_feishu/clients/: __init__.py  feishu_auth.py  feishu_messages.py  feishu_sdk.py
src/ask_user_via_feishu/daemon/: __init__.py  app.py  bootstrap.py  runtime.py  server.py
src/ask_user_via_feishu/ipc/: __init__.py  client.py
src/ask_user_via_feishu/services/: __init__.py  message_service.py  token_manager.py
tests/: test_ask_runtime.py  test_config.py  test_daemon_app.py  test_daemon_bootstrap.py  test_daemon_server.py  test_feishu_sdk.py  test_ipc_client.py  test_longconn.py  test_main.py  test_message_service.py  test_package_metadata.py  test_server.py  test_start_mcp.py  test_token_manager.py
