[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ask-user-via-feishu"
version = "0.1.0"
description = "Minimal owner-only Feishu MCP server with shared long connection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27,<1",
  "lark-oapi>=1.5,<2",
  "mcp[cli]>=1.6,<2",
  "typing-extensions>=4.0,<5",
]

[project.scripts]
ask-user-via-feishu = "ask_user_via_feishu.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
